--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Zoo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="lion.html">Lion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="elephant.html">Elephant</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="giraffe.html">Giraffe</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="zebra.html">Zebra</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Zoo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="lion.html">Lion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="elephant.html">Elephant</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="giraffe.html">Giraffe</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="zebra.html">Zebra</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
   </nav>
 
   <div class="hero"></div>
