--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     </div>
   </nav>
 
-  <div class="hero"></div>
-  <img src="images/zoo.jpg" alt="Zoo">
-  <div class="hero-text">
-    <h1>Welcome to My Zoo!</h1>
-    <p>Discover the wonders of wildlife. Click on the links above to meet our amazing animals!</p>
-  </div>
+  <div class="hero">
+    <img src="images/zoo.jpg" alt="Zoo">
+    <div class="hero-text">
+      <h1>Welcome to My Zoo!</h1>
+      <p>Discover the wonders of wildlife. Click on the links above to meet our amazing animals!</p>
+    </div>
   </div>
 
   <div class="container mt-4">
