Add elephant images and image carousel

--- a/elephant.html
+++ b/elephant.html
@@ -39,6 +39,34 @@
     </div>
   </nav>
 
+  <div class="container mt-3">
+    <h1>Elephant</h1>
+    <div class="carousel-container">
+      <div id="elephantCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/elephant1.jpg" class="d-block w-100" alt="Elephant 1">
+          </div>
+          <div class="carousel-item">
+            <img src="images/elephant2.jpg" class="d-block w-100" alt="Elephant 2">
+          </div>
+          <div class="carousel-item">
+            <img src="images/elephant3.jpg" class="d-block w-100" alt="Elephant 3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#elephantCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#elephantCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
