Add elephant animal description

--- a/elephant.html
+++ b/elephant.html
@@ -64,7 +64,21 @@
         </button>
       </div>
     </div>
-    
+    <div class="animal-info mt-3">
+      <p>
+        Elephants are the largest land animals on Earth, renowned for their intelligence, complex social structures, and
+        impressive memory. There are three species of elephants: the African bush elephant, the African forest elephant,
+        and the Asian elephant. African elephants are larger, with bigger ears that resemble the shape of the African
+        continent, while Asian elephants are smaller with rounded ears. Elephants are herbivores, consuming vast amounts
+        of vegetation daily, including grass, leaves, bark, and fruit. They are highly social creatures, often forming
+        close-knit family groups led by a matriarch, the oldest and wisest female. Elephants are also known for their
+        strong emotional bonds and have been observed mourning the deaths of their companions. Their trunks, which are
+        elongated noses, are incredibly versatile and used for breathing, smelling, touching, grasping, and producing
+        sound. Despite their size and strength, elephants are gentle giants, known for their caring nature and intricate
+        social behaviors. Unfortunately, they face significant threats from poaching and habitat destruction, leading to
+        a decline in their populations and placing them on the endangered species list.
+      </p>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
