Added giraffe description

--- a/giraffe.html
+++ b/giraffe.html
@@ -64,6 +64,22 @@
         </button>
       </div>
     </div>
+    <div class="animal-info mt-3">
+      <p>
+        Giraffes are the tallest mammals on Earth, easily recognized by their long necks, towering legs, and distinctive
+        coat patterns of irregular patches. These unique patterns not only help with camouflage but are also unique to
+        each giraffe, much like human fingerprints. Native to the savannas, grasslands, and open woodlands of Africa,
+        giraffes primarily feed on the leaves, flowers, and fruits of tall trees, particularly acacias, using their long
+        necks to reach vegetation inaccessible to other herbivores. Their long, prehensile tongues, which can extend up
+        to 18 inches, are specially adapted to grasp and strip leaves from branches, even those protected by thorns.
+        Despite their height and seemingly awkward structure, giraffes are remarkably graceful, capable of running at
+        speeds up to 35 miles per hour over short distances. Giraffes are generally social animals, often forming loose,
+        changing herds with other giraffes. While they are generally peaceful, they can use their powerful legs to
+        deliver strong kicks when threatened. Unfortunately, giraffe populations are declining due to habitat loss,
+        poaching, and human-wildlife conflict, making conservation efforts increasingly important to protect these
+        gentle giants.
+      </p>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
