Add zebra images and image carousel

--- a/zebra.html
+++ b/zebra.html
@@ -29,15 +29,42 @@
             <a class="nav-link" href="elephant.html">Elephant</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="giraffe.html">Giraffe</a>
+            <a class="nav-link" href="giraffe.html">Giraffe</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="zebra.html">Zebra</a>
+            <a class="nav-link active" href="zebra.html">Zebra</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
+
+  <div class="container mt-3">
+    <h1>Zebra</h1>
+    <div class="carousel-container">
+      <div id="zebraCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/zebra1.jpg" class="d-block w-100" alt="Zebra 1">
+          </div>
+          <div class="carousel-item">
+            <img src="images/zebra2.jpg" class="d-block w-100" alt="Zebra 2">
+          </div>
+          <div class="carousel-item">
+            <img src="images/zebra3.jpg" class="d-block w-100" alt="Zebra 3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#zebraCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#zebraCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
