Add description for zebra

--- a/zebra.html
+++ b/zebra.html
@@ -64,6 +64,18 @@
         </button>
       </div>
     </div>
+    <div class="animal-info mt-3">
+      <p>
+        Zebras are strikingly beautiful animals known for their distinctive black-and-white striped coats, which serve
+        as their most recognizable feature. These stripes are unique to each individual, much like human fingerprints,
+        and are believed to help with camouflage, confuse predators, and regulate body temperature. Zebras are social
+        animals that live in herds, often led by a dominant stallion, and are found primarily in the grasslands and
+        savannas of Africa. They are herbivores, feeding mainly on grasses, and their strong, sturdy teeth are
+        well-adapted to grazing. Despite their peaceful appearance, zebras can be aggressive when threatened, using
+        powerful kicks and bites to defend themselves. Their social structure and strong sense of community help them
+        survive in the wild, where they face natural predators like lions and hyenas.
+      </p>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
