Fix some grammar

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   </div>
 
   <div class="container mt-4">
-    <h2>Explore Our Virtual Zoo</h2>
+    <h2>Explore my Virtual Zoo</h2>
     <p>
-      Our virtual zoo offers a close-up look at some of the most fascinating creatures on Earth. Each animal has its own
+      My virtual zoo offers a close-up look at some of the most fascinating creatures on Earth. Each animal has its own
       dedicated page where you can learn about their habits, habitat, and what makes them unique. Begin your adventure
       by
       clicking on the animal names above!
